--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js-two-module-one-volum-two</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/scripts.js"></script>
+    <title>js-two-module-one-volum-two</title>
 </head>
 <body>
-  
     <div class="container">
-        <h1>Products</h1>
-        <input class="search" placeholder="Filter price.." />
+        <h1>PRODUCTS</h1>
+        <input type="text" name="searchInput" id ="searchInput" placeholder="Filter price.." />
         <div class="results">
             <div class="loader"></div>
         </div>
-        <div class="price"></div>
     </div>
-   
-  
-    <script src="js/scripts.js" type="module"></script>
 </body>
 </html>
